tests/ui/generator/yield-while-local-borrowed.stderr
error[E0626]: borrow may still be in use when generator yields
  --> $DIR/yield-while-local-borrowed.rs:13:17
   |
LL |         let a = &mut 3;
   |                 ^^^^^^
LL |
LL |         yield();
   |         ------- possible yield occurs here

error[E0626]: borrow may still be in use when generator yields
  --> $DIR/yield-while-local-borrowed.rs:40:21
   |
LL |             let b = &a;
   |                     ^^
LL |
LL |             yield();
   |             ------- possible yield occurs here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0626`.
